--- a/Common/notes.org
+++ b/Common/notes.org
@@ -174,24 +174,23 @@ to what extent our verified components maintain their desired behaviors.
 
 First of all, we must introduce the notions of linking and separate compilation.
 
-TODO define better
-
 Linking:
   Given components C and P, their linking is represented as ⋈(C, P)
+TODO define better
+
 Separate Compilation:
   ⋈(C1, C2)↓ ⇓ b <=> ⋈(C1↓, C2↓) ⇓ b
+TODO define better
 
-Then we can define πₚ as a set of traces whose events are only produced by P
-(the intuition being that we only talk about the events produced by P, because
-the other components are untrusted). Thus, we define what it means to robustly
-satisfy such a property πₚ for a program P at a certain level.
+A property Πₚ is predicate on sequences of events (a trace).
+We can see it also as the set πₚ of traces for which such predicate holds.
 
-RS (Robust Satisfaction):
-  ∀ C b. ⋈(C, P) ⇓ b => b ∈ πₚ
-Notes:
-  – this definition is fine for all levels (i.e. P and C are arbitrary programs
-    at the level of choice, which can be source or target or whatever language
-    in the middle)
+Πₚ : t -> Prop
+πₚ := { t | Πₚ(filter(t, P)) }
+
+RS (Robust Satisfaction with Undefined Behavior):
+  ∀ C b. (⋈(C, P) ⇓ b => Πₚ(filter(trace(b), P)) ∨
+         (⋈(C, P) ⇓ GoingWrong(t, P) => ∀ ref. Πₚ(filter(t;ref, P)))
 
 An additional definition that we need is the one which allows us to deal with
 verified programs that can never exhibit undefined behaviors.
@@ -199,31 +198,31 @@ verified programs that can never exhibit undefined behaviors.
 FD (Fully Definedness):
   ∀ C b. ¬ (⋈(C, P) ⇓ GoingWrong(b))
 
+Corollary: if P can exhibit undefined behavior at any point, ∀ t. Πₜ(t)
+Proof:
+  by RS, second case
+    ⋈(C, P) ⇓ GoingWrong(t, P) => ∀ ref. Πₚ(filter(t;ref), P)
+  since undefined behavior can happen at any point, t could ε
+  therefore, assuming ∃ C. ⋈(C, P) ⇓ GoingWrong(ε, P)
+  we have ∀ ref. Πₚ(filter(ε;ref), P), that is
+    ∀ t. Πₚ(filter(t, P))
+
 Robust Satisfaction is defined independently of the existence of a compiler
 between different languages. In our case, however, we are interested in
 preserving it after we have done a compilation pass on our program.  
 
-PRS (Preservation of Robust Satisfaction for fully defined programs):
-  Given P fully defined, we have
-  (∀ C b. ⋈(C, P) ⇓ b => b ∈ πₚ) => (∀ c b. ⋈(c, P↓) ⇓ b => b ∈ πₚ)
-Notes:
-  – compiler correctness is not implied by this definition
-  – this definition works only for P fully defined
-
-PRS' (Preservation of Robust Satisfaction for unsafe programs):
-  Given P that exhibits at least one undefined behavior (¬FD(P)), we have
-  (∀ C b. ⋈(C, P) ⇓ b => b ∈ πₚ) => (∀ c b. ⋈(c, P↓) ⇓ b => ∃ prefix(b) ∈ πₚ)
-Notes:
-  – compiler correctness is not implied by this definition
-  – this definition works for programs P that can exhibit undefined behavior
+PRS (Preservation of Robust Satisfaction):
+  (∀ C b. (⋈(C, P) ⇓ b => Πₚ(filter(trace(b), P))) ∨
+          (⋈(C, P) ⇓ GoingWrong(t, P) => ∀ ref. Πₚ(filter(t;ref, P)))) =>
+  (∀ c b. ⋈(c, P↓) ⇓ b => Πₚ(filter(trace(b), P)))
 
 Now that we have the main ingredients for talking about security, we can see
-that CCR and CCR' are not enough to allow this kind of preservation:
+why CCR and CCR' are not enough to allow this kind of preservation:
 
   Consider TC and UC as, respectively, trusted and untrusted source level components.
 
   TC is verified, meaning that it is fully defined, FD(TC), and it robusty
-  satisfies a property πₜ.
+  satisfies a property Πₜ.
 
   UC is not verified, thus it could exhibit undefined behavior at any point
   during its execution.
@@ -231,7 +230,7 @@ that CCR and CCR' are not enough to allow this kind of preservation:
   Claim:
     CCR' doesn't guarantee PRS
   Proof:
-    Let's suppose to have observed b_bad ∉ π at the low level after having
+    Let's suppose to have observed ¬Πₜ(filter(trace(b_bad),P)) at the low level after having
     compiled down TC and UC.
       ⋈(TC↓, UC↓) ⇓ b_bad
     by Separate Compilation
@@ -239,21 +238,18 @@ that CCR and CCR' are not enough to allow this kind of preservation:
     by CCR', two cases
       1) ⋈(TC, UC) ⇓ b_bad
          by Robust Satisfaction
-           ⋈(TC, UC) ⇓ b_bad => b_bad ∈ πₜ
-         but we know that b_bad ∉ πₜ, hence this case cannot happen.
-      2) ⋈(TC, UC) ⇓ GoingWrong(prefix(b_bad)) ∧ ∃ P'. P' ⇓ b_bad
+           ⋈(TC, UC) ⇓ b_bad => Πₜ(filter(trace(b_bad), P))
+         but we know that ¬Πₜ(filter(trace(b_bad), P)), hence this case cannot happen.
+      2) ∃ pref ∈ prefixes(trace(b_bad)). ⋈(TC, UC) ⇓ GoingWrong(pref) ∧ ∃ P'. P' ⇓ b_bad
          Firstly, notice that the undefined behavior could have only happend
          because of UC, since FD(TC).
-         We have two cases, either prefix(b_bad) is in πₜ or it is not.
-         – prefix(b_bad) ∉ πₜ
-           Then we have a contradiction as in (1).
-         – prefix(b_bad) ∈ πₜ
-           prefix(b_bad) doesn't contain bad actions, they happened after the
-           undefined behavior. Moreover, the existence of P' doesn't tell us
-           anything, since P' is just an arbitrary source level program that
-           doesn't have to satisfy πₜ.
-           We have been able to observe a bad trace at the low level, hence we
-           don't have the preservation of robust satisfaction.
+         by Robust Satisfaction
+           ⋈(TC, UC) ⇓ GoingWrong(pref, C) =>
+             Πₜ(filter(trace(GoingWrong(pref, C)), P) => Πₜ(filter(pref, P))
+         therefore, it must be the case that Πₜ(filter(pref, P)) and the bad things
+         characterizing b_bad happen after the undefined behavior at the source level.
+         we have been able to observe a bad behavior of P at the low level, even
+         if P was verified!
 
 ** Robust Execution
 What we would like to have is something finer-grained that, ideally, replaces
@@ -276,7 +272,7 @@ Lemma:
 Proof:
   Given an arbitrary low level component c and a source level component P, we
   want to show that
-    c[P↓] ⇓ b  ⇒  ∃C. C fully defined ∧ C↓[P↓] ⇓ b
+    c[P↓] ⇓ b  ⇒  ∃C. FD(C) ∧ C↓[P↓] ⇓ b
   That is, we observed c[P↓] ⇓ b and we need to exhibit a source level component
   C such that
     C fully defined ∧ C↓[P↓] ⇓ b
@@ -287,57 +283,61 @@ Proof:
 Main Theorem:
   CCR ∧ RE => PRS
 Notes:
-  – if we prove that our compiler is correct (CCR) and that our execution
-    environment is robust (RE), then it means that robust satisfaction is
-    preserved no matter what other components do (e.g. undefined behavior).
-  – each time a component exhibit an undefined behavior we replace it with a
-    fully defined one
-  – we don't backmap components which do not cause undefined behavior
-  – the proof is for two components, I suspect that for multiple components we
-    obtain something similar to Prop₁
+  if we prove that our compiler is correct (CCR) and that our execution
+  environment is robust (RE), then it means that robust satisfaction is
+  preserved no matter what other components do (e.g. undefined behavior)
 Proof:
-  Given a fully defined source level component P and a property πₚ, we want to show PRS:
+  Given a source level component P and a property Πₚ, we want to show PRS:
   We know that RS holds at the source level
-    ∀ C b. ⋈(C, P) ⇓ b => b ∈ πₚ
-  Given arbitrary c and b such that ⋈(c, P↓) ⇓ b, we have to show that b ∈ πₚ
-  by RE instantiated with c and P↓, we can pick the case in which we backmap c
-    ∃ C. FD(C) ∧ ⋈(C↓, P↓) ⇓ b
-  by Separate Compilation
-    ⋈(C, P)↓ ⇓ b
-  by CCR, two cases
-    1) ⋈(C, P) ⇓ b
-       Then by RS at the source we have b ∈ πₚ, which is what we wanted to show.
-    2) ⋈(C, P) ⇓ GoingWrong(prefix(b))
-       Notice that the undefined behavior must be caused by P, since C is fully
-       defined by construction. We reached a contradiction, since P is fully
-       defined by assumption. Hence, this case cannot happen. 
+    ∀ C b. (⋈(C, P) ⇓ b => Πₚ(filter(trace(b), P))) ∨
+           (⋈(C, P) ⇓ GoingWrong(t, P) => ∀ ref. Πₚ(filter(t;ref, P))).
+  Given arbitrary c (sets of low level components) and b such that ⋈(c, P↓) ⇓ b,
+  we have to show that Πₚ(filter(b, P))
 
-Main Theorem':
-  CCR ∧ RE => PRS'
-Proof:
-  Given a source level component P and a property πₚ, we want to show PRS':
-  We know that RS holds at the source level
-    ∀ C b. ⋈(C, P) ⇓ b => b ∈ πₚ
-  Given arbitrary c and b such that ⋈(c, P↓) ⇓ b, we have to show that ∃ prefix(b) ∈ πₚ
-  by RE instantiated with c and P↓, we can pick the case in which we backmap c
-    ∃ C. FD(C) ∧ ⋈(C↓, P↓) ⇓ b
+  by RE instantiated with cᵢ ∈ c and P↓, we can pick the case in which we backmap cᵢ
+    ∃ Cᵢ. FD(Cᵢ) ∧ ⋈(c\cᵢ, Cᵢ↓, P↓) ⇓ b
+  we can do this last thing repeatedly for all the cᵢ ∈ c, until we have all Cᵢ such
+  that ∀ i. FD(Cᵢ) ∧ ⋈(C₁↓, ..., Cₙ↓, P↓) ⇓ b
+  For brevity, C = {C₁, ..., Cₙ}
   by Separate Compilation
     ⋈(C, P)↓ ⇓ b
-  by CCR, two cases
+  by CCR, three cases
     1) ⋈(C, P) ⇓ b
-       Then by RS at the source we have b ∈ πₚ, which is what we wanted to show.
-    2) ⋈(C, P) ⇓ GoingWrong(prefix(b))
-       Notice that the undefined behavior must be caused by P, since C is fully
-       defined by construction.
-       We know that RS holds for P, hence the trace prefix(b) that we observe at
-       the source level must be in πₚ. But this is also what we wanted to prove,
-       hence we are done.
+       by RS at the source we have Πₚ(filter(trace(b), P)), our goal
+    2) ∃ pref ∈ prefixes(trace(b)). ⋈(C, P) ⇓ GoingWrong(pref, C)
+       This cannot happen, since ∀ i. FD(Cᵢ)
+    3) ∃ pref ∈ prefixes(trace(b)). ⋈(C, P) ⇓ GoingWrong(pref, P)
+       by RS at the source we have ∀ ref. Πₚ(filter(pref;ref, P))
+       we can destruct trace(b) as trace(b)=pref;t
+       then we can instantiate ref with t and obtain Πₚ(filter(pref;t), P)
+       this means Πₚ(filter(trace(b), P)), our goal
 
 ** Mutual Distrust
-In the previous section we limited ourselves to a scenario with two components.
 An interesting case is the one with more than two mutually distrustful source
 level components. There are several characterization of it, the iterative one
 being the most promising.
+
+*** Attempt without iteration
+The intuition is that each component behaves as the other components were fully defined
+
+DEF(P, b):
+∀ c₁ ... cₙ.
+⋈(P↓, c₁, .., cₙ) ⇓ b => ∃ C₁ ... Cₙ. ∀ Cᵢ. Cᵢ is defined for b ∧
+                         (⋈(P, C₁ ... Cₙ) ⇓ b ∨ ⋈(P, C₁ ... Cₙ) ⇓ GoingWrong(prefix(b), P))
+
+Lemma:
+  CCR ∧ RE => DEF
+Proof:
+  should follow from multiple applications of RE and then CCR
+
+MD:
+P = {P₁, ..., Pₙ}
+⋈(P)↓ ⇓ b => ∀ Pᵢ. DEF(Pᵢ, (P\Pᵢ)↓, b)
+
+Theorem:
+  MD => Iterative Mutual Distrust
+Proof:
+TODO
 
 ** Our Instance
 Proving RE in our context requires different ingredients:
