--- a/Common/notes.org
+++ b/Common/notes.org
@@ -39,15 +39,7 @@ ignoring the rest of the compilation chain.
 
 SCL: A property π is suffix closed or refDef closed iff
      ∀ ub(t,P) ∈π => refDef(ub(t,P)) ∈π
-
-*** Example of undefined property
-e.g. we have showed that our program never calls the procedure Error, this is property π₁
-     additionally we used an approximate static analysis which tells us that our program
-     doesn't UB at least for 3 steps, this is π₂
-     The global property that we can guarantee is
-     π = { b(t) | pref(t,3) ∈π₁ } which is closed wrt refDef(π₁ ∪ π₂)
-     this property is preserved by CCBR (CompCert)
-
+     
 *** Examples of bad traces
 - in levels below our language with events Σ we might have extra events
   that are not in Σ. Any trace with such events should be prevented by
@@ -63,17 +55,24 @@ e.g. we have showed that our program never calls the procedure Error, this is pr
   If the system guarantees that we guarantee properties closed wrt to
   refDef then this trace is prevented.
 
+*** Example of undefined property
+e.g. we have showed that our program never calls the procedure Error, this is property π₁
+     additionally we used an approximate static analysis which tells us that our program
+     doesn't UB at least for 3 steps, this is π₂
+     The global property that we can guarantee is
+     π = { b(t) | pref(t,3) ∈π₁ } which is closed wrt refDef(π₁ ∪ π₂)
+     this property is preserved by CCBR (CompCert)
+
 ** Linked Program Cₛ
-*** properties for a component
+*** Properties for a component
 ψ = n interfaces
 Pᵢ ∈ { components compatible with interface i }
 Ps ∈ { sets of components compatible with ψ }
+
 DEF(Pᵢ)  = { db(t) | ∃Ps={P₁ ... Pᵢ₋₁, Pᵢ₊₁ ... Pₙ}. ⋈(Ps ∪ {Pᵢ}) ⇓ db(t) }
 DEF(Ps) = ⋂ { DEF(Pᵢ)  | Pᵢ ∈ Pₛ }
 DEF     = ⋃ { DEF(Ps) | ∃ Ps } = { db | ∃Ps. db ∈ DEF(Ps) } 
-UNDEF(Pᵢ) = { ub(t₁,Pᵢ) | ∃ db(t) ∈ DEF(Pᵢ) /\ 
-                     t=t₁at₂ /\ a∈Pᵢ } Undefined program behaviors
-                                      it is a prefix closure
+UNDEF(Pᵢ) = { ub(t₁,Pᵢ) | ∃ db(t) ∈ DEF(Pᵢ) /\ t=t₁at₂ /\ a∈Pᵢ }
 UNDEF(Ps) = ⋂ { UNDEF(Pᵢ) | Pᵢ∈Ps}
 UNDEF = ⋃ { UNDEF(Ps) | ∃Ps }
 
@@ -85,13 +84,14 @@ Corollary: if πᵢ is SCL => πᵢ ∈ DEF ∪ UNDEF(Pᵢ)
 if Pᵢ is defined then πᵢ ∈ DEF(Pᵢ)
 if Pᵢ is undefined then πᵢ ∈ DEF ∪ UNDEF(Pᵢ)
 
-*** Properties for a linked program
-π = ⋂ πᵢ
-π ∈ DEF ∪ UNDEF
-if Ps is defined then π ∈ DEF(Ps)
-if Pᵢ is undefined then πᵢ ∈ DEF ∪ UNDEF(Pᵢ)
+example:
+a component Cᵥ is verified and has an event yes, fired when a user
+replies positively, and an event bomb.
+Property π states that 'bomb' happens only after the action 'yes'. 
+Cᵥ is linked with a component Cᵤ unverified which causes ub. We want
+to preserve π.
 
-*** Properties over traces
+**** Properties over traces
 We now define properties Πᵢ over the traces of a component.
 Each element in t is tagged with a component Pᵢ
 filter(t,Pᵢ) = List.filter(fun (e,Pⱼ) -> Pᵢ=Pⱼ, t)
@@ -103,21 +103,48 @@ Note: the only properties that can be defined over a partial program
 with UB are those that assumes that the program doesn't UB before a
 certain length, starting from some of its entrypoints.
 
-*** Catalin's example
-TODO
+*** Properties for sets of component
+We now define properties Π over the traces of a set of components.
+Each element in t is tagged with a component Pᵢ
+filter(t,Ps) = List.filter(fun (e,Pⱼ) -> Pⱼ∈Ps, t)
+
+We can define the π from our Π
+π = { b(t) | filter(t,Ps) ∈ Π }
+
+example:
+The property requires that component C₁ asks for permission and only
+if the event is 'yes' calls C₂.bomb. C₁ and C₂ are verified and linked
+with more components that are not.
+In our instance the interfaces would allow only C₁ to call C₂.bomb and
+even if the other have undefined behavior the property is preserved.
+If C₁ or C₂ have ub then the property is true only for a prefix.
+
+**** Special case from properties of single components
+π = ⋂ πᵢ
+π ∈ DEF ∪ UNDEF
+if Ps is defined then π ∈ DEF(Ps)
+if Pᵢ is undefined then πᵢ ∈ DEF ∪ UNDEF(Pᵢ)
 
 * Satisfaction and its preservation for whole programs
   P satisfies a property π iff
   P ⇓ b => b ∈ π
+
+  Preservation of satisfaction
+  P satisfies π => P↓ satisfies π
+
+  Note that π can be open like in CompCert or closed wrt to DEF, this
+  leads to different definitions of compiler correctness.
+
 * Compiler Correctness
+** Open properties
 Compiler Correctness is generally stated in terms of simulations. CompCert, for
 instance, defines it as a backward simulation with refinement. The refinement
 part is important because it permits to model several peculiarities of the C
 language, e.g. the presence of undefined behaviors at the source language.
 
 CCR (Compiler Correctness with Refinement):
-  ∀ b. P↓ ⇓ b => P ⇓ b
-               ∨ P ⇓ GoingWrong(prefix(b))
+  ∀ b. P↓ ⇓ db => P ⇓ db
+                ∨ P ⇓ ub(prefix(db))
 
 By looking carefully at what this definitions says, we can notice that at the
 low level we are guaranteed to observe either the same source level behavior of
@@ -126,7 +153,10 @@ undefined behavior. Basically, the second case tells us that we cannot rely on
 what happen after an undefined behavior, i.e. the refinement that takes place at
 the low level is arbitrary.
 
-** Vertical definability:
+Thm: CCR => Preservation of satisfaction
+
+** Closed properties
+*** Vertical definability
 VDEF: P ⇓ₜ b => ∃P'. P'⇓ₛ b
 
 In principle there is no need to talk about compilation, definability
@@ -141,14 +171,14 @@ program you start with.
 
 Some simple implications:
 CCR + DEF => CCRD
-** Compiler Correctness with definability
+*** Compiler Correctness with definability
 A possible way to limit the damage caused by undefined behaviors could be to say
 something more about the refinement. The idea is to constrain it to what is
 possible at the source level.
 
 CCRD:
-  ∀ b. P↓ ⇓ b => P ⇓ b
-               ∨ (P ⇓ GoingWrong(prefix(b)) ∧ ∃ P'. P' ⇓ b)
+  ∀ b. P↓ ⇓ db => P ⇓ db
+                ∨ (P ⇓ ub(prefix(db)) ∧ ∃ P'. P' ⇓ db)
 
 With this new definition we are limiting the possible refinements so that they
 must be reproducible at the source level by an arbitrary program. This property,
@@ -157,106 +187,9 @@ For instance, we conjecture that CompCert already satisfies it, because its
 events are too coarse and we should always be able to exhibit a legal high-level
 program that produces them.
 
-TODO mention Satisfaction for complete programs ?
-** Catalin's example Guglielmo
-Now that we have the main ingredients for talking about security, we can see
-why CCR and CCRD are not enough to allow this kind of preservation:
-
-  Consider TC and UC as, respectively, trusted and untrusted source level components.
-
-  TC is verified, meaning that it is fully defined, FD(TC), and it robusty
-  satisfies a property Πₜ.
-
-  UC is not verified, thus it could exhibit undefined behavior at any point
-  during its execution.
-
-  Claim:
-    CCRD doesn't guarantee PRS
-  Proof:
-    Let's suppose to have observed ¬Πₜ(filter(trace(b_bad),P)) at the low level after having
-    compiled down TC and UC.
-      ⋈(TC↓, UC↓) ⇓ b_bad
-    by Separate Compilation
-      ⋈(TC, UC)↓ ⇓ b_bad
-    by CCRD, two cases
-      1) ⋈(TC, UC) ⇓ b_bad
-         by Robust Satisfaction
-           ⋈(TC, UC) ⇓ b_bad => Πₜ(filter(trace(b_bad), P))
-         but we know that ¬Πₜ(filter(trace(b_bad), P)), hence this case cannot happen.
-      2) ∃ pref ∈ prefixes(trace(b_bad)). ⋈(TC, UC) ⇓ GoingWrong(pref) ∧ ∃ P'. P' ⇓ b_bad
-         Firstly, notice that the undefined behavior could have only happend
-         because of UC, since FD(TC).
-         by Robust Satisfaction
-           ⋈(TC, UC) ⇓ GoingWrong(pref, C) =>
-             Πₜ(filter(trace(GoingWrong(pref, C)), P) => Πₜ(filter(pref, P))
-         therefore, it must be the case that Πₜ(filter(pref, P)) and the bad things
-         characterizing b_bad happen after the undefined behavior at the source level.
-         we have been able to observe a bad behavior of P at the low level, even
-         if P was verified!
-** Catalin's example Marco
-Applying DEF and CCBR to the whole program is not enough to prevent a
-bad behavior.
-It is possible to have a bad behavior at the target if we use only
-CCBR, as a result of a refinement:
-⋈(Ctrusted, Cuntrusted)↓ ⇓ₜ b_bad =>CCBR
-let P=⋈(Ctrusted, Cuntrusted) in P ⇓ₛ b \/ P ⇓ₛ pref(b);UB(Cuntrusted)
-And that behavior can be picked up by definability.
-⋈(Ctrusted, Cuntrusted)↓ ⇓ₜ b_bad ⇒ ∃P'. P' ⇓ₛ b_bad
-The intuition is that an UB in any component makes the others lose
-guarantees, even if they are f.d.
-
-We need to apply a finer notion, PCCBR.
-The intuition is that because we have correct compilation the
-behaviors at target cannot be bad, so the example doesn't apply.
-P FD and robustly satisfies π: ∀C. C[P] ⇓b => b ∈ π(P)
-b_bad ∉ π(P)
-C↓[P↓] ⇓ₜ b_bad
-=>DEC P↓ ⇓ₜ{C} b_bad
-=>PCCBR P ⇓ₛ{C} b_bad   (because P is verified we can do only one case)
-=>DEFS ∃C'. C'[P] ⇓ₛ b_bad
-This is a contradiction because P robustly satisfies π.
-
-The same holds from intermediate with UB
-C↓[P↓] ⇓ᵢ b_bad
-=>DECR P↓ ⇓ᵢ{C} b' /\ (b'=b_bad ‌\/ b_bad=pref(b');UB(C))
-=>PCCBR P ⇓ₛ{C} b' (because P is verified we can do only one case)
-=>DEFS ∃C'. C'[P] ⇓ₛ b'
-This should be a contradiction because if b_bad is not in π, the same
-should hold for any of its refinements.
-
-
-
-P unverified
-C↓[P↓] ⇓ₜ b_bad
-=>DEC P↓ ⇓ₜ{C} b_bad
-=>PCCBR P ⇓ₛ{C} b_bad \/ P ⇓ₛ{C} pref(b_bad);UB(P) 
-=>DEFS ∃C'. C'[P] ⇓ₛ pref(b_bad);UB(P)
-we can guarantee up to the pref(b_bad).
-
-
-
-What if P is not verified?
-C↓[P↓] ⇓ᵢ b_bad
-=>DECR P↓ ⇓ᵢ{C} b' /\ (b'=b_bad ‌\/ b_bad=pref(b');UB(C))
-=>PCCBR P ⇓ₛ{C} b'' /\ (b''=b' \/ b''=pref(b');UB(P))
-=>DEFS ∃C'. C'[P] ⇓ₛ ??
-Is this a contradiction? What is the connection between b_bad and b''?
-
-
-What if P is not verified and we use PCCBD?
-C↓[P↓] ⇓ᵢ b_bad
-=>DECR P↓ ⇓ᵢ{C} b' /\ (b'=b_bad ‌\/ b_bad=pref(b');UB(C))
-=>PCCBD P ⇓ₛ{C} b' \/ (P ⇓ₛ{C} pref(b');UB(P) /\ ∃P'. P' ⇓ₛ{C} b)
-left=>DEFS ∃C'. C'[P] ⇓ₛ b'??
-right=>DEFS ∃C'. C'[P] ⇓ₛ b'??
-
-Is this a contradiction? What is the connection between b_bad and b''?
+Thm: CCRD => Preservation of satisfaction
 
 * Robust Satisfaction and its preservation for linked programs
-An interesting scenario that we can use to validate our definitions is the one in
-which we mix verified and unverified/untrusted components. Here we want to see
-to what extent our verified components maintain their desired behaviors.
-
 First of all, we must introduce the notions of linking and separate compilation.
 
 Linking:
@@ -279,19 +212,6 @@ RS Robust Satisfaction
 An additional definition that we need is the one which allows us to deal with
 verified programs that can never exhibit undefined behaviors.
 
-FD (Fully Definedness):
-  ∀ C b. ¬ (⋈(C, P) ⇓ GoingWrong(b))
-TODO in many cases we might need only definedness for a specific behavior b
-
-Corollary: if P can exhibit undefined behavior at any point, ∀ t. Πₜ(t)
-Proof:
-  by RS, second case
-    ⋈(C, P) ⇓ GoingWrong(t, P) => ∀ ref. Πₚ(filter(t;ref), P)
-  since undefined behavior can happen at any point, t could ε
-  therefore, assuming ∃ C. ⋈(C, P) ⇓ GoingWrong(ε, P)
-  we have ∀ ref. Πₚ(filter(ε;ref), P), that is
-    ∀ t. Πₚ(filter(t, P))
-
 Robust Satisfaction is defined independently of the existence of a compiler
 between different languages. In our case, however, we are interested in
 preserving it after we have done a compilation pass on our program.  
@@ -299,7 +219,14 @@ preserving it after we have done a compilation pass on our program.
 PRS (Preservation of Robust Satisfaction):
   (∀C b. C[P]⇓b => b∈π) => (∀c b. c[P↓]⇓b => b∈π)
 
+Note that P and C are sets of components.
+
 * Robust Compilation
+
+RC:  ∀c defined. c[P↓] ⇓ₜ db => ∃C. C[P] ⇓ₛ db \/ C[P] ⇓ₛ ub(pref(db),P)
+RCD: ∀c defined. c[P↓] ⇓ₜ db => ∃C. C[P] ⇓ₛ db \/ (C[P] ⇓ₛ ub(pref(db),P) /\ ∃P'. C[P'] ⇓ₛ db)
+
+** why this definition
 Starting from CCR and CCRD we can obtain the equivalent for a
 component using the partial semantics.
 
@@ -309,53 +236,123 @@ Partial Compilee Correctness Backward and Defined
 PCCRD: P↓ ⇓ᵢ{C} b => P ⇓ₛ{C} db \/ (P ⇓ₛ{C} ub(pref(b),P) /\ ∃P'. P' ⇓ₛ{C} db)  
 
 We can go back to complete semantics obtaining the following
-RC4:  ∀c FD. c[P↓] ⇓ᵢ db => ∃C. C[P] ⇓ₛ db \/ C[P] ⇓ₛ ub(pref(b),P)
-RC4D: ∀c FD. c[P↓] ⇓ᵢ db => ∃C. C[P] ⇓ₛ db \/ (C[P] ⇓ₛ ub(pref(b),P) /\ ∃P'. C[P'] ⇓ₛ db)
+RC:  ∀c FD. c[P↓] ⇓ᵢ db => ∃C. C[P] ⇓ₛ db \/ C[P] ⇓ₛ ub(pref(b),P)
+RCD: ∀c FD. c[P↓] ⇓ᵢ db => ∃C. C[P] ⇓ₛ db \/ (C[P] ⇓ₛ ub(pref(b),P) /\ ∃P'. C[P'] ⇓ₛ db)
 
 TODO should C be defined or fully defined?
 
-** proof of RC4 for our instance
-∀c FD. c[P↓] ⇓ᵢ db =>DEC
+** proof of RC4 for our instance from T to S
+∀c. c[P↓] ⇓ₜ db =>DEC
 P↓ ⇓ₜ{C} db =>PCCR 
 P ⇓ₛ{C} b' /\ (b'=db \/ b'=ub(pref(db),P) =>DEF in both cases
 ∃C. C[P] ⇓ₛ b' /\ (b'=db \/ b'=ub(pref(db),P)
 
+** proof of RC4 for our instance from I to S
+   it can be proved with the huge assumption that c is defined, this
+   however doesn't influence preservation of properties.
+
+   TODO: RC_IT + RC_SI => RC_ST
+
 ** proof that RC4 (plus other stuff) satisfies PRS
 First we need this Lemma to apply RC4 when the context is not defined.
 
-Closed wrt FD context (not needed from the target)
-HR: ∀C. C[P]⇓b => ∃C' FD. C'[P]⇓b' /\ filter(b)=filter(b')
-this implies? the following which is more intuitive but less usable in the proof
+This is necessary for the refinements of C
+HR: ∀C. C[P]⇓b(t) => ∃C' defined. C'[P]⇓db(t)
+    ∀C. C[P]⇓b(t) /\ b∈π => ∃C' defined. C'[P]⇓db(t) /\ db∈π
+    ∀C. C[P]⇓b => ∃C' defined. C'[P]⇓b' /\ filter(b)=filter(b')
     ∀C. C[P]⇓b /\ b∈π => ∃C' FD. C'[P]⇓b' /\ b'≥b /\ b'∈π
 
-TODO Proof
+This is necessary for the refinements of P
+SCL: A property π is suffix closed or refDef closed iff
+     ∀ ub(t,P) ∈π => refDef(ub(t,P)) ∈π
+
+TODO: does SCL imply HR?
+
+TODO HR Proof
 looks like a DECR and DEF at the same level
 I could use DECR but I'd like to have a b' which is not longer that b,
 ideally I can make a C' that instead of doing ub, as soon as it is
 called terminates. This leads to the same filtering for b.
+TODO if you have RC_SI and RC_IT it looks like you get HR, is it
+related to compositionality?
 
+TODO the following proof is valid for open or closed π, we just need
+the extra definability for the closed case.
 
+*** RC implies PRS from S to T
+Preservation of RS
+(∀b C. C[P] ⇓ₛ b => b∈πₚ) =>
+(∀b c. c[P↓] ⇓ₜ b => b∈πₚ)
 
-TODO the following proof is valid with different choiches of π. Our
-instance can preserve π that are suffix closed wrt refDef, however if
-we start with π that are suffix closed wrt to refSig the proof still
-holds. The proof holds also for closed wrt to refUni, that would be
-the properties preserved by compcert
+Proof using RC+SCL
+note that:
+- the proof needs the assumption that c is defined to apply RC and this
+  is true because we are at the target
+- the proof works also if P↓ does ub, even if at the target it doesn't.
 
-
-Proof that RC4+HR+SCL implies PRS.
-Assume h1: (∀b C. C[P]⇓b => b∈π) 
-       h2:  ∀b c. c[P↓]⇓b
-- C FD, P FD
+Assume h1: (∀b C. C[P] ⇓ₛ b => b∈π)
+       h2:  ∀b c. c[P↓] ⇓ₜ db
+- c no ub, P↓ no ub, P no ref
+- c no ub, P↓ ub, P no ref
 h2 =>RC4
 ∃C. C[P] ⇓ₛ b =>h1
 b∈π
-- C FD, P not FD
+- c no ub, P↓ no ub, P ref
+- c no ub, P↓ ub, P ref
 h2 =>RC4
-∃C. C[P] ⇓ₛ pref(b);UB(P) =>h1
-pref(b);UB(P) ∈π =>SCL
+∃C. C[P] ⇓ₛ ub(pref(b),P) =>h1
+ub(pref(b),P) ∈π =>SCL
 b∈π
-- C not FD, P FD
+
+*** RC implies PRS from S to I
+Preservation of RS given by RC
+(∀b C. C[P] ⇓ₛ b => b∈πₚ) =>
+(∀b c defined. c[P↓] ⇓ᵢ b => b∈πₚ)
+
+
+PRS:
+(∀b C. C[P] ⇓ₛ b => b∈πₚ) =>
+(∀b c. c[P↓] ⇓ᵢ b => b∈πₚ)
+
+Proof 1
+Preservation of RC
+(∀b C. C[P] ⇓ₛ b => b∈πₚ) =>
+(∀b c defined. c[P↓] ⇓ᵢ b => b∈πₚ)
+
+Satisfaction of closed properties
+(∀b c defined. c[P↓] ⇓ᵢ b => b∈πₚ) => (∀b c. c[P↓] ⇓ᵢ b => b∈πₚ)
+TODO check
+
+
+Proof 2
+HR: ∀C. C[P]⇓b(t) => ∃C' defined. C'[P]⇓db(t)
+
+
+HR implies SCP
+h1: (∀b c defined. c[P↓] ⇓ᵢ b => b∈πₚ) => 
+h2: ∀b c. c[P↓] ⇓ᵢ b 
+
+h2: ∀b c. c[P↓] ⇓ᵢ b(t) =>HR
+∃C' defined. C'[P]⇓db(t) =>h1
+db(t) ∈ πₚ => ??
+b(t) ∈ πₚ
+
+
+
+
+Assume h1: (∀b C. C[P] ⇓ₛ b => b∈π)
+       h2:  ∀b c. c[P↓] ⇓ᵢ b
+
+
+- c ub, P↓ no ub, C no ub, P ub
+h2 =>HR
+∃c' defined. c'[P↓]⇓db /\ db(t)=b(t) =>RC4
+∃C. C[P] ⇓ₛ ub(pref(db),P)) /\ db(t)=b(t) =>h1
+ub(pref(db),P))∈π /\ db(t)=b(t) =>SCL
+b(t)∈π
+
+
+- c no ub, P↓ ub, C no ub, P no ub
 h2 =>HR
 ∃c' FD. c'[P↓]⇓b' /\ filter(b)=filter(b') =>RC4
 ∃C. C[P] ⇓ₛ b' /\ filter(b)=filter(b') =>h1
@@ -512,8 +509,8 @@ by Composition
   ⋈(p\pᵢ ∪ Pᵢ↓) ⇓ b
 we have that
   ∃ Pᵢ FD(Pᵢ) ∧ ⋈(p\pᵢ ∪ Pᵢ↓) ⇓ b
-which is what we wanted to show.
-* Mutual Distrust
+  which is what we wanted to show.
+* Mutual Distrust for πᵢ
 An interesting case is the one with more than two mutually distrustful source
 level components. There are several characterization of it, the iterative one
 being the most promising.
@@ -524,6 +521,14 @@ MD:
 P = {P₁, ..., Pₙ}
 ⋈(P)↓ ⇓ b => ∀ Pᵢ. RC4(Pᵢ, (P\Pᵢ)↓, b)
 
+* Mutual Distrust for π
+
+RC4(Ps, cs, db) = ∃Cs. ⋈(Cs,Ps) ⇓ₛ db \/ ∃Pᵢ. ⋈(Cs,Ps) ⇓ₛ ub(pref(db),Pᵢ)
+
+MD:
+P = {P₁, ..., Pₙ}   Ps ∈ subsets(P)
+⋈(P)↓ ⇓ b => ∀ Ps. RC4(Ps, (P\Ps)↓, b)
+  
 * Bits and pieces
 ** Partial Definability
 PDEF: PP ⇓ₜ b  => ∃PP'. PP'⇓ₛ b
@@ -625,6 +630,105 @@ by Composition
 we have that
   ∃ Pᵢ FD(Pᵢ) ∧ ⋈(p\pᵢ ∪ Pᵢ↓) ⇓ b
 which is what we wanted to show.
+** Catalin's example Guglielmo
+Now that we have the main ingredients for talking about security, we can see
+why CCR and CCRD are not enough to allow this kind of preservation:
+
+  Consider TC and UC as, respectively, trusted and untrusted source level components.
+
+  TC is verified, meaning that it is fully defined, FD(TC), and it robusty
+  satisfies a property Πₜ.
+
+  UC is not verified, thus it could exhibit undefined behavior at any point
+  during its execution.
+
+  Claim:
+    CCRD doesn't guarantee PRS
+  Proof:
+    Let's suppose to have observed ¬Πₜ(filter(trace(b_bad),P)) at the low level after having
+    compiled down TC and UC.
+      ⋈(TC↓, UC↓) ⇓ b_bad
+    by Separate Compilation
+      ⋈(TC, UC)↓ ⇓ b_bad
+    by CCRD, two cases
+      1) ⋈(TC, UC) ⇓ b_bad
+         by Robust Satisfaction
+           ⋈(TC, UC) ⇓ b_bad => Πₜ(filter(trace(b_bad), P))
+         but we know that ¬Πₜ(filter(trace(b_bad), P)), hence this case cannot happen.
+      2) ∃ pref ∈ prefixes(trace(b_bad)). ⋈(TC, UC) ⇓ GoingWrong(pref) ∧ ∃ P'. P' ⇓ b_bad
+         Firstly, notice that the undefined behavior could have only happend
+         because of UC, since FD(TC).
+         by Robust Satisfaction
+           ⋈(TC, UC) ⇓ GoingWrong(pref, C) =>
+             Πₜ(filter(trace(GoingWrong(pref, C)), P) => Πₜ(filter(pref, P))
+         therefore, it must be the case that Πₜ(filter(pref, P)) and the bad things
+         characterizing b_bad happen after the undefined behavior at the source level.
+         we have been able to observe a bad behavior of P at the low level, even
+         if P was verified!
+** Catalin's example Marco
+Applying DEF and CCBR to the whole program is not enough to prevent a
+bad behavior.
+It is possible to have a bad behavior at the target if we use only
+CCBR, as a result of a refinement:
+⋈(Ctrusted, Cuntrusted)↓ ⇓ₜ b_bad =>CCBR
+let P=⋈(Ctrusted, Cuntrusted) in P ⇓ₛ b \/ P ⇓ₛ pref(b);UB(Cuntrusted)
+And that behavior can be picked up by definability.
+⋈(Ctrusted, Cuntrusted)↓ ⇓ₜ b_bad ⇒ ∃P'. P' ⇓ₛ b_bad
+The intuition is that an UB in any component makes the others lose
+guarantees, even if they are f.d.
+
+We need to apply a finer notion, PCCBR.
+The intuition is that because we have correct compilation the
+behaviors at target cannot be bad, so the example doesn't apply.
+P FD and robustly satisfies π: ∀C. C[P] ⇓b => b ∈ π(P)
+b_bad ∉ π(P)
+C↓[P↓] ⇓ₜ b_bad
+=>DEC P↓ ⇓ₜ{C} b_bad
+=>PCCBR P ⇓ₛ{C} b_bad   (because P is verified we can do only one case)
+=>DEFS ∃C'. C'[P] ⇓ₛ b_bad
+This is a contradiction because P robustly satisfies π.
+
+The same holds from intermediate with UB
+C↓[P↓] ⇓ᵢ b_bad
+=>DECR P↓ ⇓ᵢ{C} b' /\ (b'=b_bad ‌\/ b_bad=pref(b');UB(C))
+=>PCCBR P ⇓ₛ{C} b' (because P is verified we can do only one case)
+=>DEFS ∃C'. C'[P] ⇓ₛ b'
+This should be a contradiction because if b_bad is not in π, the same
+should hold for any of its refinements.
+
+
+
+P unverified
+C↓[P↓] ⇓ₜ b_bad
+=>DEC P↓ ⇓ₜ{C} b_bad
+=>PCCBR P ⇓ₛ{C} b_bad \/ P ⇓ₛ{C} pref(b_bad);UB(P) 
+=>DEFS ∃C'. C'[P] ⇓ₛ pref(b_bad);UB(P)
+we can guarantee up to the pref(b_bad).
+
+
+
+What if P is not verified?
+C↓[P↓] ⇓ᵢ b_bad
+=>DECR P↓ ⇓ᵢ{C} b' /\ (b'=b_bad ‌\/ b_bad=pref(b');UB(C))
+=>PCCBR P ⇓ₛ{C} b'' /\ (b''=b' \/ b''=pref(b');UB(P))
+=>DEFS ∃C'. C'[P] ⇓ₛ ??
+Is this a contradiction? What is the connection between b_bad and b''?
+
+
+What if P is not verified and we use PCCBD?
+C↓[P↓] ⇓ᵢ b_bad
+=>DECR P↓ ⇓ᵢ{C} b' /\ (b'=b_bad ‌\/ b_bad=pref(b');UB(C))
+=>PCCBD P ⇓ₛ{C} b' \/ (P ⇓ₛ{C} pref(b');UB(P) /\ ∃P'. P' ⇓ₛ{C} b)
+left=>DEFS ∃C'. C'[P] ⇓ₛ b'??
+right=>DEFS ∃C'. C'[P] ⇓ₛ b'??
+
+Is this a contradiction? What is the connection between b_bad and b''?
+
+** fully definedness
+FD (Fully Definedness):
+  ∀ C b. ¬ (⋈(C, P) ⇓ GoingWrong(b))
+TODO in many cases we might need only definedness for a specific behavior b
+
 * Robust Execution with Undefined Behavior at target
 RE (Robust Execution):
   ∀ ρ={p₁,...,pₙ}.
